# MSML605-PROJ

./: .env.example  .gitignore  AWS Deployment guide.md  DEPLOYMENT.md  GUIDE.md  MSML605_Progress_Report_NEW.docx  PLAN.md  Project Idea.docx  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements-ingestion.txt  requirements.txt
configs/: aws_config.yaml  feature_config.yaml  model_config.yaml
dashboard/: app.py  proxy.py
dashboard/components/: drift_panel.py  metrics_panel.py  prediction_chart.py
data/baseline/: baseline_stats.json  latest_drift_report.json
data/monitoring/: drift_history.parquet  predictions_log.parquet
data/processed/: AAPL.parquet  AMZN.parquet  GOOGL.parquet  META.parquet  MSFT.parquet  NVDA.parquet  TSLA.parquet
data/raw/: AAPL_daily.parquet
infra/: buildspec.yml  docker-compose.yml  ec2_setup.sh
infra/docker/: Dockerfile.dashboard  Dockerfile.inference  Dockerfile.ingestion  Dockerfile.training
infra/lambda/: retrain_handler.py
models/latest/: baseline_stats.json  model.xgb  model_p10.xgb  model_p90.xgb  scaler.pkl  version.txt
scripts/: 00_cleanup.sh  01_bootstrap.sh  02_build.sh  03_initial_ingest.sh  04_initial_train.sh  05_deploy.sh  06_setup_automation.sh  common.sh  ingest_local.sh  run_baseline_comparison.py  run_local.sh  run_prophet_comparison.py  train_local.sh
src/features/: feature_pipeline.py  feature_store.py  technical_indicators.py
src/inference/: app.py  predictor.py  schemas.py
src/ingestion/: data_validator.py  fetch_alphavantage.py  fetch_yahoo.py  ingest_and_upload.py
(+16 files in other folders)
